
* XINS/Java Common Library:
  - Replaced the way to find the hostname for the hostname task.
  - Added serialize() function to PropertyReaderUtils that constructs a
    LogdocSerializable for a PropertyReader.

* XINS/Java Client Framework:
  - Removed the deprecated getCode() method from UnsuccessfulCallException.
  - Extended interface of UnacceptableCallResultException.
  - Overhaul of logdoc entries.

* Logdoc:
  - Changed the interface of class AbstractLogdocSerializable (introduced in
    XINS 0.201) in an incompatible way. All subclasses have been adapted
    accordingly.

* Generated specification documentation:
  - Fixed regeneration of the test forms if the environments.xml file has
    changed. This bug has been in XINS since version 0.183.

* Generated build file:
  - Set the format of the web.xml with Unix line feed.
  - The index of the APIs are regenerated if needed when executing
    specdocs-<api>.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.202:

* XINS/Java Server Framework:
  - Added the optional org.xins.server.output.compatibility property that
    sets the output format compatibility for the returned XML. The APIs that
    want to keep compatibility with XINS 0.180 or below should set the value
    to "alpha".

* XINS/Java Common Library:
  - Added a new static method getItemByName() in EnumItem.
  - Changed the getItemByValue() to a static method.
  - Renamed getTimeOut() in class TargetDescriptor to getTotalTimeOut().
    Deprecated the method with the old name.
  - Added size() method to PropertyReader interface and to all implementing
    classes.
  - Added another way to find the hostname for the hostname task.

* XINS/Java Client Framework:
  - CallException and all subclasses now take CallRequest, TargetDescriptor
    and duration arguments. The exception message has been greatly improved.
    The old constructors have been removed, so existing code may need